# ChangeLog for dev-util/eric
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.62 2008/07/16 22:36:38 yngwin Exp $

  16 Jul 2008; Ben de Groot <yngwin@gentoo.org> eric-4.0.4.ebuild,
  eric-4.1.1.ebuild:
  Change deps to allow for split Qt4 ebuilds (#217183), but as there is only
  >=PyQt4-4.3 in the tree, there is no need to force a version.

  29 May 2008; Ali Polatel <hawking@gentoo.org> eric-3.9.5.ebuild,
  eric-4.1.1.ebuild, eric-4.1.4.ebuild:
  python_mod_optimize is ROOT aware. Fixed python_mod_cleanup.

*eric-4.1.4 (24 May 2008)

  24 May 2008; Ben de Groot <yngwin@gentoo.org> +files/4.1.4-paths.patch,
  +eric-4.1.4.ebuild:
  Version bump

  12 May 2008; Markus Rothe <corsair@gentoo.org> eric-4.0.4.ebuild:
  Stable on ppc64

  14 Apr 2008; Ingmar Vanhassel <ingmar@gentoo.org> eric-4.1.1.ebuild:
  Update HOMEPAGE for bug 217570.

*eric-4.1.1 (11 Mar 2008)

  11 Mar 2008; Markus Ullmann <jokey@gentoo.org> +files/4.1.1-paths.patch,
  +eric-4.1.1.ebuild:
  Version bump

  21 Feb 2008; Raúl Porcel <armin76@gentoo.org> eric-4.0.4.ebuild:
  sparc stable

  09 Feb 2008; Markus Ullmann <jokey@gentoo.org> eric-4.0.4.ebuild:
  Stable on x86

  04 Jan 2008; Ali Polatel <hawking@gentoo.org> -eric-4.0.1.ebuild,
  -eric-4.0.3.ebuild, eric-4.0.4.ebuild:
  Changed qscintilla depend to qscintilla-python. Added built_with_use check
  for qscintilla-python's qt4 USE flag, bug 198697. Drop old.

  04 Jan 2008; Brent Baude <ranger@gentoo.org> eric-4.0.1.ebuild,
  eric-4.0.3.ebuild, eric-4.0.4.ebuild:
  Marking eric-4.0.1|3|4 ~ppc64 per bug 203972

*eric-4.0.4 (01 Jan 2008)

  01 Jan 2008; Markus Ullmann <jokey@gentoo.org> +eric-4.0.4.ebuild:
  Version bump as  keeps notifying the user that a new version is out

  01 Jan 2008; Raúl Porcel <armin76@gentoo.org> eric-4.0.3.ebuild:
  Readd ~sparc, keywords were dropped for no reason
