@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/eric
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.62 2008/07/16 22:36:38 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.63 2008/07/16 23:17:46 yngwin Exp $
+
+*eric-4.1.6 (16 Jul 2008)
+
+  16 Jul 2008; Ben de Groot <yngwin@gentoo.org> +eric-4.1.6.ebuild:
+  Version bump
 
   16 Jul 2008; Ben de Groot <yngwin@gentoo.org> eric-4.0.4.ebuild,
   eric-4.1.1.ebuild:
